--- a/kapitel/01_zusammenfassung.tex
+++ b/kapitel/01_zusammenfassung.tex
@@ -1,56 +1,22 @@
 \chapter{Zusammenfassung}
 
-\textit{Stellen Sie Ihrem Businessplan -- nachdem Sie alle Inhalte zusammengetragen haben -- eine Zusammenfassung voran. Beschreiben Sie darin kurz und prägnant Ihre Geschäftsidee, die wesentlichen Erfolgs- und Risikofaktoren und Ihre Ziele für die ersten Jahre Ihrer Selbständigkeit.}
+\textbf{FreshGuard -- Intelligente Lebensmittelverwaltung} ist eine webbasierte Anwendung zur Bestands- und Haltbarkeitsverwaltung von Lebensmitteln, gegründet von Maike Abel, Phillipp Atzler und Elisa Dörnbrak. Das Gründerteam besteht aus ausgebildeten Fachinformatikern der Anwendungsentwicklung mit fundierten Kenntnissen in PHP, Webentwicklung, Datenbankdesign und Projektmanagement.
 
-\section{Name des Unternehmens}
-\textbf{FreshGuard} -- Intelligente Lebensmittelverwaltung
+\section{Geschäftsidee und Besonderheiten}
 
-\section{Namen der Gründer}
-\begin{itemize}
-    \item Maike Abel
-    \item Phillipp Atzler
-    \item Elisa Dörnbrak
-\end{itemize}
+FreshGuard ermöglicht es Haushalten und Wohngemeinschaften, ihre Lebensmittelvorräte digital zu verwalten. Nutzer können Artikel mit Mindesthaltbarkeitsdatum erfassen und werden rechtzeitig an ablaufende Produkte erinnert. Die Besonderheit liegt in der Möglichkeit, dass mehrere Haushaltsmitglieder gemeinsam einen Haushalt verwalten können, wobei automatische Warnungen bei bald ablaufenden Produkten durch farbliche Kennzeichnung angezeigt werden. Als browserbasierte Anwendung ist keine Installation erforderlich -- FreshGuard läuft auf allen Geräten. Das Freemium-Modell bietet einen kostenlosen Basis-Plan mit Premium-Optionen (Basic/Pro), während die Daten datenschutzkonform auf Servern in Deutschland gespeichert werden.
 
-\section{Geschäftsidee}
-Webbasierte Anwendung zur Bestands- und Haltbarkeitsverwaltung von Lebensmitteln für Haushalte und Wohngemeinschaften. Nutzer können Artikel mit Mindesthaltbarkeitsdatum (MHD) erfassen und werden rechtzeitig an ablaufende Produkte erinnert.
+\section{Zielkunden und Vertrieb}
 
-\section{Besonderheit der Geschäftsidee}
-\begin{itemize}
-    \item Mehrere Haushaltsmitglieder können gemeinsam einen Haushalt verwalten
-    \item Automatische Warnungen bei bald ablaufenden Produkten (farbliche Kennzeichnung)
-    \item Keine Installation nötig -- läuft im Browser auf allen Geräten
-    \item Kostenloser Basis-Plan mit Premium-Optionen (Basic/Pro)
-    \item Datenschutzkonform mit Serverstandort Deutschland
-\end{itemize}
+Die Zielgruppe umfasst private Haushalte, Wohngemeinschaften und Familien, die ihre Lebensmittelvorräte besser verwalten und Verschwendung reduzieren möchten. Der Vertrieb erfolgt über Online-Marketing via Social Media, SEO-Optimierung und Empfehlungen zufriedener Nutzer.
 
-\section{Qualifikationen der Gründer}
-Fachinformatiker Anwendungsentwicklung mit Kenntnissen in PHP, Webentwicklung, Datenbankdesign und Projektmanagement.
+\section{Kapitalbedarf und Umsatzerwartung}
 
-\section{Zielkunden}
-Private Haushalte, Wohngemeinschaften und Familien, die ihre Lebensmittelvorräte besser verwalten und Verschwendung reduzieren möchten.
+Der Gesamtkapitalbedarf für 24 Monate beträgt circa 375.000 Euro und setzt sich zusammen aus Bürokosten inklusive Miete, Internet und Strom (24.000 Euro), Ausrüstung für Schreibtische, PCs, Monitore und Peripherie (4.300 Euro), Arbeitsstunden für drei Personen (345.600 Euro) sowie Server-Hosting (900 Euro).
 
-\section{Vertriebsweg}
-Online-Marketing über Social Media, SEO-Optimierung und Empfehlungen durch zufriedene Nutzer.
-
-\section{Kapitalbedarf}
 \begin{tabular}{lr}
     \toprule
-    \textbf{Position} & \textbf{Betrag} \\
-    \midrule
-    Büro + Miete, Internet, Strom (24 Monate) & 24.000 \euro{} \\
-    Ausrüstung (Schreibtische, PCs, Monitore, Peripherie) & 4.300 \euro{} \\
-    Arbeitsstunden (3 Pers. $\times$ 160h/Mon. $\times$ 24 Mon. $\times$ 30\euro{}) & 345.600 \euro{} \\
-    Server-Hosting (24 Monate) & 900 \euro{} \\
-    \midrule
-    \textbf{Gesamt (24 Monate)} & \textbf{ca. 375.000 \euro{}} \\
-    \bottomrule
-\end{tabular}
-
-\section{Erwartetes Umsatzvolumen}
-\begin{tabular}{lr}
-    \toprule
-    \textbf{Jahr} & \textbf{Umsatz} \\
+    \textbf{Jahr} & \textbf{Erwarteter Umsatz} \\
     \midrule
     Jahr 1 & ca. 5.000 \euro{} (ca. 100 Premium-Nutzer) \\
     Jahr 2 & ca. 15.000 \euro{} (ca. 300 Premium-Nutzer) \\
@@ -58,22 +24,10 @@ Online-Marketing über Social Media, SEO-Optimierung und Empfehlungen durch zufr
     \bottomrule
 \end{tabular}
 
-\section{Mitarbeiter in den ersten drei Jahren}
-3 Gründer + ggf. 1--2 zusätzliche Entwickler/Support-Mitarbeiter
+\section{Team und Ziele}
 
-\section{Ziele}
-\begin{itemize}
-    \item Reduzierung der Lebensmittelverschwendung bei Nutzern um 15\%
-    \item Rechtzeitiger Verbrauch von mindestens 85\% der erfassten Produkte
-    \item Kontinuierliche Verbesserung basierend auf Nutzerfeedback
-\end{itemize}
+Das Team besteht aus den drei Gründern, wobei bei entsprechendem Wachstum ein bis zwei zusätzliche Entwickler oder Support-Mitarbeiter hinzukommen sollen. Die Kernziele sind die Reduzierung der Lebensmittelverschwendung bei Nutzern um 15 Prozent, der rechtzeitige Verbrauch von mindestens 85 Prozent der erfassten Produkte sowie die kontinuierliche Verbesserung basierend auf Nutzerfeedback.
 
-\section{Risiken}
-\begin{itemize}
-    \item Konkurrenz durch bestehende Apps
-    \item Zu wenige zahlende Kunden für Premium-Pläne
-    \item Technische Ausfälle oder Sicherheitsprobleme
-\end{itemize}
+\section{Risiken und Zeitplan}
 
-\section{Geplanter Start}
-\textbf{01. Februar 2026}
+Die größten Risiken bestehen in der Konkurrenz durch bestehende Apps, einer möglicherweise zu geringen Anzahl zahlender Kunden für Premium-Pläne sowie technischen Ausfällen oder Sicherheitsproblemen. Der geplante Marktstart ist der \textbf{01. Februar 2026}.
