--- a/kapitel/02_gruenderperson.tex
+++ b/kapitel/02_gruenderperson.tex
@@ -1,71 +1,29 @@
 \chapter{Gründerperson(en)}
 
-\section{Fachliche Qualifikationen}
-\begin{itemize}
-    \item Ausbildung zum/zur Fachinformatiker/in der Anwendungsentwicklung
-    \item Erfahrung in PHP, HTML/CSS, JavaScript
-    \item Datenbankdesign mit SQL (MySQL/MariaDB)
-    \item MVC-Architektur und objektorientierte Programmierung
-    \item Versionsverwaltung mit Git
-\end{itemize}
+\section{Qualifikationen und Kompetenzen}
 
-\section{Branchenkenntnisse}
-\begin{itemize}
-    \item Webentwicklung (Frontend und Backend)
-    \item Software-Architektur und Design Patterns
-    \item Datenbankmanagement und -optimierung
-    \item IT-Sicherheit (OWASP Top 10, sichere Authentifizierung)
-    \item Responsive Webdesign
-\end{itemize}
+Das Gründerteam von FreshGuard besteht aus drei ausgebildeten Fachinformatikern der Anwendungsentwicklung, die über umfassende Erfahrung in PHP, HTML/CSS und JavaScript verfügen. Ihre technischen Fähigkeiten umfassen Datenbankdesign mit SQL (MySQL/MariaDB), MVC-Architektur und objektorientierte Programmierung sowie Versionsverwaltung mit Git. Im Bereich der Branchenkenntnisse decken sie sowohl Frontend- als auch Backend-Webentwicklung ab und beherrschen Software-Architektur und Design Patterns, Datenbankmanagement und -optimierung, IT-Sicherheit nach OWASP Top 10 sowie responsives Webdesign.
 
-\section{Kaufmännische Qualifikationen}
-\begin{itemize}
-    \item Grundkenntnisse aus der Ausbildung:
-    \begin{itemize}
-        \item Kalkulation und Preisgestaltung
-        \item Projektmanagement
-        \item Kostenrechnung
-        \item Angebots- und Rechnungswesen
-    \end{itemize}
-\end{itemize}
+Die kaufmännischen Qualifikationen stammen aus der Ausbildung und umfassen Grundkenntnisse in Kalkulation und Preisgestaltung, Projektmanagement, Kostenrechnung sowie Angebots- und Rechnungswesen. Im unternehmerischen Bereich verfügen die Gründer über Erfahrung in eigenständiger Projektplanung und -durchführung, agiler Softwareentwicklung, kundenorientiertem Denken und Problemlösungskompetenz. Die praktische Branchenerfahrung wurde durch Ausbildungsprojekte, die Entwicklung von Webanwendungen im beruflichen Umfeld sowie die kontinuierliche Beschäftigung mit aktuellen Technologien und Frameworks erworben.
 
-\section{Unternehmerische Qualifikationen}
-\begin{itemize}
-    \item Eigenständige Projektplanung und -durchführung
-    \item Erfahrung in agiler Softwareentwicklung
-    \item Kundenorientiertes Denken
-    \item Problemlösungskompetenz
-\end{itemize}
+\section{Stärken des Teams}
 
-\section{Branchenerfahrung}
-\begin{itemize}
-    \item Praktische Erfahrung durch Ausbildungsprojekte
-    \item Entwicklung von Webanwendungen im beruflichen Umfeld
-    \item Kenntnisse aktueller Technologien und Frameworks
-\end{itemize}
-
-\section{Besondere Stärken}
-\begin{itemize}
-    \item \textbf{Technische Kompetenz:} Full-Stack-Webentwicklung
-    \item \textbf{Teamarbeit:} Klare Aufgabenverteilung (Frontend/Backend)
-    \item \textbf{Qualitätsfokus:} Benutzerfreundlichkeit und Datenschutz stehen im Vordergrund
-    \item \textbf{Motivation:} Persönliches Interesse an Nachhaltigkeit und Lebensmittelverschwendung
-\end{itemize}
+Die besonderen Stärken des Gründerteams liegen in der technischen Kompetenz im Bereich Full-Stack-Webentwicklung und einer klaren Aufgabenverteilung zwischen Frontend und Backend. Der Qualitätsfokus auf Benutzerfreundlichkeit und Datenschutz steht dabei im Vordergrund, getrieben durch ein persönliches Interesse an Nachhaltigkeit und der Reduzierung von Lebensmittelverschwendung.
 
 \section{Defizite und Ausgleichsmaßnahmen}
+
+Das Team ist sich seiner Defizite bewusst und hat entsprechende Gegenmaßnahmen geplant. Die begrenzte Marketing-Erfahrung soll durch Online-Tutorials, Fachliteratur und gegebenenfalls externe Beratung ausgeglichen werden. Dem geringen Eigenkapital begegnet das Team mit einem Bootstrapping-Ansatz und minimalem Budget, das sich zunächst auf Hosting-Kosten beschränkt. Für die fehlende Erfahrung in der Unternehmensführung werden IHK-Beratung, Gründerseminare und Mentoring in Anspruch genommen.
+
 \begin{tabular}{p{6cm}p{7cm}}
     \toprule
     \textbf{Defizit} & \textbf{Ausgleichsmaßnahme} \\
     \midrule
-    Marketing-Erfahrung begrenzt & Online-Tutorials, Fachliteratur und ggf. externe Beratung \\
-    Wenig Eigenkapital & Start mit minimalem Budget (Hosting-only), Bootstrapping-Ansatz \\
+    Marketing-Erfahrung begrenzt & Online-Tutorials, Fachliteratur, externe Beratung \\
+    Wenig Eigenkapital & Bootstrapping-Ansatz, minimales Budget \\
     Keine Erfahrung in Unternehmensführung & IHK-Beratung, Gründerseminare, Mentoring \\
     \bottomrule
 \end{tabular}
 
 \section{Unterstützung im privaten Umfeld}
-\begin{itemize}
-    \item Familie und Freunde unterstützen das Gründungsvorhaben
-    \item Flexibilität durch Home-Office-Möglichkeit
-    \item Netzwerk aus IT-Fachleuten für fachlichen Austausch
-\end{itemize}
+
+Die Gründer können auf ein unterstützendes Umfeld bauen. Familie und Freunde unterstützen das Gründungsvorhaben, und durch die Möglichkeit zum Home-Office besteht ausreichend Flexibilität. Zudem verfügt das Team über ein Netzwerk aus IT-Fachleuten, das für fachlichen Austausch genutzt werden kann.
