--- a/kapitel/03_geschaeftsidee.tex
+++ b/kapitel/03_geschaeftsidee.tex
@@ -1,74 +1,23 @@
 \chapter{Geschäftsidee: Produkt/Dienstleistung}
 
-\section{Zweck des Vorhabens}
-Haushalten und Wohngemeinschaften eine einfache Lösung zu bieten, um Lebensmittelvorräte zu verwalten und Verschwendung durch vergessene Mindesthaltbarkeitsdaten zu reduzieren.
+\section{Produktbeschreibung und Kundennutzen}
 
-\section{Beschreibung des Produkts/der Dienstleistung}
-\textbf{FreshGuard} -- Webportal zur Bestands- und Haltbarkeitsverwaltung mit:
-\begin{itemize}
-    \item Artikelerfassung (Name, MHD, Menge, Lagerort)
-    \item Haushalts-Verwaltung mit Einladungssystem
-    \item Dashboard mit Statistiken und Warnungen
-    \item Lizenz-System (Free/Basic/Pro)
-\end{itemize}
+FreshGuard ist ein Webportal zur Bestands- und Haltbarkeitsverwaltung von Lebensmitteln, das Haushalten und Wohngemeinschaften eine einfache Lösung bietet, um ihre Vorräte zu verwalten und Verschwendung durch vergessene Mindesthaltbarkeitsdaten zu reduzieren. Die Anwendung ermöglicht die Erfassung von Artikeln mit Name, Mindesthaltbarkeitsdatum, Menge und Lagerort, bietet eine Haushalts-Verwaltung mit Einladungssystem, ein Dashboard mit Statistiken und Warnungen sowie ein flexibles Lizenz-System mit Free-, Basic- und Pro-Plänen.
 
-\section{Besonderheit der Geschäftsidee (USP)}
-\begin{itemize}
-    \item \textbf{Multi-User-Haushaltsverwaltung:} Rollensystem mit Eigentümer, Co-Eigentümer und Mitwirkenden
-    \item \textbf{Automatische Warnungen:} Farbliche Kennzeichnung (Grün/Gelb/Rot) bei ablaufenden Produkten
-    \item \textbf{Browserbasiert:} Keine Installation nötig, responsive auf allen Geräten
-    \item \textbf{Datenschutz:} DSGVO-konform mit Serverstandort Deutschland
-\end{itemize}
+Das Alleinstellungsmerkmal von FreshGuard liegt in der echten Multi-User-Haushaltsverwaltung mit einem durchdachten Rollensystem aus Eigentümer, Co-Eigentümer und Mitwirkenden. Automatische Warnungen mit farblicher Kennzeichnung in Grün, Gelb und Rot machen auf ablaufende Produkte aufmerksam. Als browserbasierte Anwendung ist keine Installation erforderlich und die Plattform läuft responsiv auf allen Geräten. Dabei ist FreshGuard vollständig DSGVO-konform mit Serverstandort in Deutschland.
 
-\section{Kundennutzen}
-\begin{itemize}
-    \item Weniger Lebensmittelverschwendung durch rechtzeitige Erinnerungen
-    \item Besserer Überblick über vorhandene Vorräte
-    \item Gemeinsame Verwaltung für alle Haushaltsmitglieder
-    \item Kostenersparnis durch optimierten Verbrauch
-    \item Zeitersparnis bei der Einkaufsplanung
-\end{itemize}
+Der Kundennutzen ist vielfältig: Weniger Lebensmittelverschwendung durch rechtzeitige Erinnerungen führt zu Kostenersparnis durch optimierten Verbrauch. Nutzer erhalten einen besseren Überblick über vorhandene Vorräte und können diese gemeinsam mit allen Haushaltsmitgliedern verwalten, was auch die Einkaufsplanung erleichtert und Zeit spart.
 
 \section{Unternehmensziele}
 
-\subsection{Kurzfristige Ziele (Jahr 1)}
-\begin{itemize}
-    \item MVP fertigstellen und in Betrieb nehmen
-    \item Erste Nutzer gewinnen
-    \item Feedback sammeln und einarbeiten
-    \item 100+ aktive Nutzer erreichen
-\end{itemize}
+Im ersten Jahr steht die Fertigstellung und Inbetriebnahme des MVP im Vordergrund, gefolgt von der Gewinnung erster Nutzer, dem Sammeln und Einarbeiten von Feedback sowie dem Erreichen von über 100 aktiven Nutzern. Langfristig, in den Jahren zwei bis fünf, soll die Nutzerbasis auf über 1.000 aktive Haushalte ausgebaut werden. Die Premium-Funktionen werden um Barcode-Scan zur schnellen Artikelerfassung, E-Mail-Erinnerungen an ablaufende Produkte und Rezeptvorschläge basierend auf vorhandenen Zutaten erweitert. Außerdem ist die Entwicklung einer mobilen App für iOS und Android geplant.
 
-\subsection{Langfristige Ziele (Jahr 2--5)}
-\begin{itemize}
-    \item Nutzerbasis auf 1.000+ aktive Haushalte ausbauen
-    \item Premium-Funktionen erweitern:
-    \begin{itemize}
-        \item Barcode-Scan zur schnellen Artikelerfassung
-        \item E-Mail-Erinnerungen an ablaufende Produkte
-        \item Rezeptvorschläge basierend auf vorhandenen Zutaten
-    \end{itemize}
-    \item Mobile App entwickeln (iOS/Android)
-\end{itemize}
+\section{Entwicklungsstand und Voraussetzungen}
 
-\section{Entwicklungsstand}
-MVP (Minimal Viable Product) mit allen Kernfunktionen fertiggestellt:
-\begin{itemize}
-    \item \textbf{Phase 1:} Basisstruktur -- \textit{abgeschlossen}
-    \item \textbf{Phase 2:} Haushalts-Verwaltung -- \textit{abgeschlossen}
-    \item \textbf{Phase 3:} Lizenz-System -- \textit{abgeschlossen}
-    \item \textbf{Phase 4:} Admin-Panel -- \textit{abgeschlossen}
-\end{itemize}
-
-\section{Voraussetzungen bis zum Start}
-\begin{itemize}
-    \item Produktiv-Hosting einrichten
-    \item Finale Tests durchführen
-    \item Benutzerdokumentation vervollständigen
-    \item Marketingmaterialien erstellen
-\end{itemize}
+Das MVP (Minimal Viable Product) mit allen Kernfunktionen ist fertiggestellt. Die Basisstruktur, die Haushalts-Verwaltung, das Lizenz-System und das Admin-Panel sind vollständig implementiert und abgeschlossen. Vor dem Start müssen noch das Produktiv-Hosting eingerichtet, finale Tests durchgeführt, die Benutzerdokumentation vervollständigt und Marketingmaterialien erstellt werden.
 
 \section{Preisstrategie}
+
 \begin{tabular}{llr}
     \toprule
     \textbf{Plan} & \textbf{Features} & \textbf{Preis} \\
@@ -80,20 +29,9 @@ MVP (Minimal Viable Product) mit allen Kernfunktionen fertiggestellt:
     \bottomrule
 \end{tabular}
 
-\section{Start der Vermarktung}
-\textbf{01. Februar 2026} nach Abschluss der Testphase
+\vspace{0.5cm}
+Die Vermarktung startet am \textbf{01. Februar 2026} nach Abschluss der Testphase.
 
-\section{Gesetzliche Formalitäten}
-\begin{itemize}
-    \item Gewerbeanmeldung
-    \item Impressum erstellen
-    \item Datenschutzerklärung (DSGVO-konform)
-    \item Allgemeine Geschäftsbedingungen (AGB) formulieren
-\end{itemize}
+\section{Rechtliche Aspekte}
 
-\section{Patente und Schutzrechte}
-\begin{itemize}
-    \item Markenname \glqq FreshGuard\grqq{} beim DPMA schützen lassen (geplant)
-    \item Domain freshguard.de gesichert
-    \item Quellcode als Geschäftsgeheimnis geschützt
-\end{itemize}
+Zu den erforderlichen gesetzlichen Formalitäten gehören die Gewerbeanmeldung, die Erstellung eines Impressums, eine DSGVO-konforme Datenschutzerklärung sowie die Formulierung allgemeiner Geschäftsbedingungen. Im Bereich der Schutzrechte ist geplant, den Markennamen \glqq FreshGuard\grqq{} beim DPMA schützen zu lassen. Die Domain freshguard.de ist bereits gesichert und der Quellcode wird als Geschäftsgeheimnis geschützt.
