--- a/kapitel/04_markt_wettbewerb.tex
+++ b/kapitel/04_markt_wettbewerb.tex
@@ -2,13 +2,8 @@
 
 \section{Zielkunden}
 
-\subsection{Wer sind Ihre Kunden?}
-Private Haushalte und Wohngemeinschaften, die ihre Lebensmittelvorräte digital verwalten möchten.
+Die Zielkunden von FreshGuard sind private Haushalte und Wohngemeinschaften, die ihre Lebensmittelvorräte digital verwalten möchten. Der Fokus liegt primär auf dem deutschsprachigen Raum (DACH-Region), da der Serverstandort in Deutschland liegt und die Benutzeroberfläche deutschsprachig ist. Die Hauptzielgruppe sind technikaffine und umweltbewusste Personen im Alter von 25 bis 55 Jahren, die in Haushalten mit zwei bis sechs Personen leben -- also Paare, Familien und Wohngemeinschaften. Der Fokus liegt auf Nachhaltigkeit und bewusstem Konsum.
 
-\subsection{Wo sind Ihre Kunden?}
-Primär deutschsprachiger Raum (DACH-Region), da Serverstandort Deutschland und deutschsprachige Benutzeroberfläche.
-
-\subsection{Kundensegmente}
 \begin{tabular}{ll}
     \toprule
     \textbf{Kriterium} & \textbf{Zielgruppe} \\
@@ -20,32 +15,14 @@ Primär deutschsprachiger Raum (DACH-Region), da Serverstandort Deutschland und 
     \bottomrule
 \end{tabular}
 
-\subsection{Referenzkunden}
-Testnutzer aus dem persönlichen Umfeld während der Entwicklungsphase.
+\vspace{0.5cm}
+Das Geschäftsmodell basiert auf vielen kleinen Einzelkunden (B2C), wodurch keine Abhängigkeit von einzelnen Großkunden besteht. Testnutzer aus dem persönlichen Umfeld während der Entwicklungsphase dienen als erste Referenzkunden.
 
-\subsection{Abhängigkeit von Großkunden}
-Nein, das Geschäftsmodell basiert auf vielen kleinen Einzelkunden (B2C). Keine Abhängigkeit von einzelnen Großkunden.
+Die typischen Probleme der Zielkunden sind ein fehlender Überblick über Lebensmittelvorräte, vergessene Mindesthaltbarkeitsdaten, Lebensmittelverschwendung und damit verbundene Kosten sowie mangelnde Koordination innerhalb des Haushalts. FreshGuard adressiert diese Probleme durch eine speziell für Haushalte mit mehreren Personen entwickelte Lösung, die einfach zu bedienen ist und keine Installation erfordert. Die DSGVO-Konformität mit deutschem Serverstandort schafft Vertrauen, während die faire Preisgestaltung mit kostenlosem Einstieg die Hürden niedrig hält.
 
-\subsection{Kundenbedürfnisse und Probleme}
-\begin{itemize}
-    \item Fehlender Überblick über Lebensmittelvorräte
-    \item Vergessene Mindesthaltbarkeitsdaten
-    \item Lebensmittelverschwendung und damit verbundene Kosten
-    \item Mangelnde Koordination innerhalb des Haushalts
-\end{itemize}
-
-\subsection{Warum soll der Kunde bei Ihnen kaufen?}
-\begin{itemize}
-    \item Speziell für Haushalte mit mehreren Personen entwickelt
-    \item Einfache Bedienung ohne Installation
-    \item DSGVO-konform mit Serverstandort Deutschland
-    \item Faire Preisgestaltung mit kostenlosem Einstieg
-\end{itemize}
-
-\subsection{Erwartete Umsätze}
 \begin{tabular}{lr}
     \toprule
-    \textbf{Jahr} & \textbf{Umsatz} \\
+    \textbf{Jahr} & \textbf{Erwarteter Umsatz} \\
     \midrule
     Jahr 1 & ca. 12.000 \euro{} \\
     Jahr 2 & ca. 96.000 \euro{} \\
@@ -55,71 +32,18 @@ Nein, das Geschäftsmodell basiert auf vielen kleinen Einzelkunden (B2C). Keine 
 
 \section{Wettbewerber}
 
-\subsection{Konkurrierende Entwicklungen}
-Ja, diverse Vorrats-Apps existieren am Markt:
-\begin{itemize}
-    \item Bring! (Einkaufslisten-fokussiert)
-    \item NoWaste (ähnliches Konzept)
-    \item Our Groceries
-    \item Pantry Check
-    \item Diverse kleinere MHD-Tracker-Apps
-\end{itemize}
+Am Markt existieren diverse Vorrats-Apps, darunter Bring! (mit Fokus auf Einkaufslisten), NoWaste (ähnliches Konzept), Our Groceries, Pantry Check sowie verschiedene kleinere MHD-Tracker-Apps. Die Preise der Konkurrenz bewegen sich meist im Bereich einer kostenlosen Basis-Version mit Premium-Features zwischen 2 und 5 Euro pro Monat.
 
-\subsection{Preise der Konkurrenz}
-Meist kostenlose Basis-Version, Premium-Features zwischen 2--5 \euro{}/Monat.
+Die Stärken der Konkurrenten liegen in ihrer etablierten Nutzerbasis, der App-Store-Präsenz und der Verfügbarkeit nativer Apps. Ihre Schwächen sind jedoch, dass oft keine echte Haushalts-Kollaboration geboten wird, kein deutsches Hosting vorhanden ist (was zu DSGVO-Bedenken führt) und die Multi-User-Funktionen eingeschränkt sind.
 
-\subsection{Stärken und Schwächen der Konkurrenten}
-\begin{tabular}{p{6cm}p{7cm}}
-    \toprule
-    \textbf{Stärken} & \textbf{Schwächen} \\
-    \midrule
-    Etablierte Nutzerbasis & Oft keine echte Haushalts-Kollaboration \\
-    App-Store-Präsenz & Kein deutsches Hosting (DSGVO-Bedenken) \\
-    Native Apps verfügbar & Eingeschränkte Multi-User-Funktionen \\
-    \bottomrule
-\end{tabular}
+FreshGuard unterscheidet sich durch echte Multi-User-Haushalte mit einem durchdachten Rollensystem aus Eigentümer, Co-Eigentümer und Mitwirkenden. Als browserbasierte Lösung ist keine Installation erforderlich und die Plattform ist vollständig plattformunabhängig. Mit DSGVO-Konformität durch deutschen Serverstandort und transparenten Preisen im Freemium-Modell mit fairen Premium-Optionen grenzt sich FreshGuard klar von der Konkurrenz ab.
 
-\subsection{Worin unterscheiden Sie sich von Ihren Mitbewerbern?}
-\begin{itemize}
-    \item \textbf{Echte Multi-User-Haushalte:} Rollensystem mit Eigentümer, Co-Eigentümer und Mitwirkenden
-    \item \textbf{Browserbasiert:} Keine Installation, plattformunabhängig
-    \item \textbf{DSGVO-konform:} Serverstandort Deutschland
-    \item \textbf{Transparente Preise:} Freemium-Modell mit fairen Premium-Optionen
-\end{itemize}
-
-\subsection{Eigene Schwächen gegenüber Konkurrenten}
-\begin{tabular}{p{5cm}p{8cm}}
-    \toprule
-    \textbf{Schwäche} & \textbf{Gegenmaßnahme} \\
-    \midrule
-    Keine native App (nur Web) & Progressive Web App (PWA) für App-ähnliches Erlebnis \\
-    Keine etablierte Nutzerbasis & Fokus auf Alleinstellungsmerkmal: echte Multi-User-Haushalte \\
-    Keine App-Store-Präsenz & SEO und Social Media Marketing \\
-    \bottomrule
-\end{tabular}
+Die eigenen Schwächen gegenüber Konkurrenten werden aktiv adressiert: Das Fehlen einer nativen App wird durch eine Progressive Web App (PWA) für ein App-ähnliches Erlebnis kompensiert. Die noch nicht etablierte Nutzerbasis soll durch Fokus auf das Alleinstellungsmerkmal der echten Multi-User-Haushalte aufgebaut werden. Die fehlende App-Store-Präsenz wird durch SEO und Social Media Marketing ausgeglichen.
 
 \section{Standort}
 
-\subsection{Standort des Unternehmens}
-Online als Webanwendung, erreichbar über jeden Browser weltweit.
+Als rein digitales Produkt ist FreshGuard als Webanwendung online erreichbar und über jeden Browser weltweit zugänglich. Der physische Standort des Unternehmens ist daher sekundär, während der Server-Standort in Deutschland für Datenschutz und Vertrauen entscheidend ist.
 
-\subsection{Bedeutung des Standorts}
-Als rein digitales Produkt ist der physische Standort des Unternehmens sekundär. Der Server-Standort (Deutschland) ist hingegen wichtig für Datenschutz und Vertrauen.
+Die Vorteile dieses digitalen Standorts sind maximale Reichweite ohne Installations-Hürden, Plattformunabhängigkeit (Windows, Mac, Linux, iOS, Android), Skalierbarkeit ohne geografische Einschränkungen sowie das durch den deutschen Serverstandort geschaffene Vertrauen bei DACH-Kunden.
 
-\subsection{Vorteile des Standorts}
-\begin{itemize}
-    \item Maximale Reichweite ohne Installations-Hürden
-    \item Plattformunabhängig (Windows, Mac, Linux, iOS, Android)
-    \item Skalierbar ohne geografische Einschränkungen
-    \item Serverstandort Deutschland = Vertrauen bei DACH-Kunden
-\end{itemize}
-
-\subsection{Nachteile des Standorts}
-\begin{tabular}{p{5cm}p{8cm}}
-    \toprule
-    \textbf{Nachteil} & \textbf{Ausgleichsmaßnahme} \\
-    \midrule
-    Internetverbindung erforderlich & PWA mit Service Worker für eingeschränkte Offline-Nutzung (geplant) \\
-    Keine Offline-Funktionalität & Mobile-optimiertes responsives Design \\
-    \bottomrule
-\end{tabular}
+Der Nachteil, dass eine Internetverbindung erforderlich ist und keine vollständige Offline-Funktionalität besteht, wird durch geplante PWA-Funktionen mit Service Worker für eingeschränkte Offline-Nutzung sowie durch mobile-optimiertes responsives Design ausgeglichen.
