--- a/kapitel/05_marketing.tex
+++ b/kapitel/05_marketing.tex
@@ -1,48 +1,15 @@
 \chapter{Marketing}
 
-\section{Angebot}
+\section{Angebot und Kundennutzen}
 
-\subsection{Kundennutzen}
-\begin{itemize}
-    \item Überblick über alle Lebensmittelvorräte im Haushalt
-    \item Rechtzeitige Erinnerung an ablaufende Produkte durch farbliche Warnungen
-    \item Weniger Lebensmittelverschwendung = Geldersparnis
-    \item Gemeinsame Verwaltung für alle Haushaltsmitglieder
-\end{itemize}
+FreshGuard bietet seinen Nutzern einen vollständigen Überblick über alle Lebensmittelvorräte im Haushalt mit rechtzeitiger Erinnerung an ablaufende Produkte durch farbliche Warnungen. Dies führt zu weniger Lebensmittelverschwendung und damit zu Geldersparnis. Die gemeinsame Verwaltung für alle Haushaltsmitglieder mit einem echten Multi-User-System inklusive Rollen (Eigentümer, Co-Eigentümer, Mitwirkende) unterscheidet FreshGuard von der Konkurrenz. Die DSGVO-Konformität mit deutschem Serverstandort und die Tatsache, dass keine Installation nötig ist, da alles im Browser funktioniert, runden das Angebot ab.
 
-\subsection{Vorteile gegenüber der Konkurrenz}
-\begin{itemize}
-    \item Echtes Multi-User-System mit Rollen (Eigentümer, Co-Eigentümer, Mitwirkende)
-    \item DSGVO-konform mit deutschem Serverstandort
-    \item Keine Installation nötig -- funktioniert im Browser
-\end{itemize}
+Der Service umfasst einen Online-Hilfe- und FAQ-Bereich, E-Mail-Support für alle Nutzer sowie Priority-Support für Pro-Kunden. Regelmäßige Updates und neue Features werden kontinuierlich bereitgestellt. Als Garantieleistungen werden eine 30-tägige Geld-zurück-Garantie bei Premium-Abos, Datensicherung und eine Verfügbarkeitsgarantie von 99 Prozent Uptime sowie die Möglichkeit zum kostenlosen Datenexport jederzeit angeboten.
 
-\subsection{Serviceleistungen}
-\begin{itemize}
-    \item Online-Hilfe und FAQ-Bereich
-    \item E-Mail-Support für alle Nutzer
-    \item Priority-Support für Pro-Kunden
-    \item Regelmäßige Updates und neue Features
-\end{itemize}
+\section{Preisstrategie}
 
-\subsection{Garantieleistungen}
-\begin{itemize}
-    \item 30 Tage Geld-zurück-Garantie bei Premium-Abos
-    \item Datensicherung und Verfügbarkeitsgarantie (99\% Uptime)
-    \item Kostenloser Datenexport jederzeit möglich
-\end{itemize}
+FreshGuard verfolgt ein Freemium-Modell mit kostenlosem Basis-Plan und Premium-Upgrades. Der Free-Plan ermöglicht Einzelnutzern das Testen der Anwendung, während bezahlte Pläne erweiterte Funktionen und mehr Haushalte sowie Mitglieder bieten.
 
-\section{Preis}
-
-\subsection{Preisstrategie}
-\textbf{Freemium-Modell:}
-\begin{itemize}
-    \item Kostenloser Basis-Plan mit Premium-Upgrades
-    \item Free-Plan für Einzelnutzer zum Testen
-    \item Bezahlte Pläne für erweiterte Funktionen und mehr Haushalte/Mitglieder
-\end{itemize}
-
-\subsection{Preisgestaltung}
 \begin{tabular}{llr}
     \toprule
     \textbf{Plan} & \textbf{Leistungen} & \textbf{Preis} \\
@@ -56,44 +23,13 @@
     \bottomrule
 \end{tabular}
 
-\subsection{Preiskalkulation}
-\begin{tabular}{lr}
-    \toprule
-    \textbf{Position} & \textbf{Kosten} \\
-    \midrule
-    Hosting-Kosten & ca. 72 \euro{}/Jahr \\
-    Domain & ca. 12 \euro{}/Jahr \\
-    \midrule
-    \textbf{Break-Even} & Ab 10 zahlenden Nutzern \\
-    \bottomrule
-\end{tabular}
-
 \vspace{0.5cm}
-Preise orientieren sich an der Konkurrenz (2--5 \euro{}/Monat üblich).
+Die laufenden Kosten für Hosting betragen circa 72 Euro pro Jahr und für die Domain circa 12 Euro pro Jahr, sodass der Break-Even bereits ab 10 zahlenden Nutzern erreicht wird. Die Preise orientieren sich an der Konkurrenz, wo 2 bis 5 Euro pro Monat üblich sind.
 
 \section{Vertrieb}
 
-\subsection{Vertriebskosten}
-\begin{tabular}{lr}
-    \toprule
-    \textbf{Position} & \textbf{Kosten/Jahr} \\
-    \midrule
-    Serverkosten (Hosting) & 60 \euro{} \\
-    Domain & 12 \euro{} \\
-    Weitere Vertriebskosten & 0 \euro{} (Self-Service) \\
-    \midrule
-    \textbf{Gesamt} & 72 \euro{}/Jahr \\
-    \bottomrule
-\end{tabular}
+Die Vertriebskosten sind minimal, da der Vertrieb vollständig als Self-Service erfolgt. Nutzer registrieren sich direkt über die Webanwendung und Premium-Upgrades erfolgen innerhalb der Anwendung. Es gibt keine Zwischenhändler oder Vertriebspartner. Die jährlichen Kosten belaufen sich auf circa 60 Euro für Serverkosten und 12 Euro für die Domain.
 
-\subsection{Vertriebskanäle}
-\begin{itemize}
-    \item \textbf{Self-Service:} Nutzer registrieren sich direkt über die Webanwendung
-    \item \textbf{In-App-Upgrade:} Premium-Upgrade erfolgt innerhalb der Anwendung
-    \item Keine Zwischenhändler oder Vertriebspartner
-\end{itemize}
-
-\subsection{Angestrebte Absatzmenge}
 \begin{tabular}{lrrr}
     \toprule
     \textbf{Jahr} & \textbf{Registrierte Nutzer} & \textbf{Premium-Anteil} & \textbf{Premium-Nutzer} \\
@@ -104,35 +40,16 @@ Preise orientieren sich an der Konkurrenz (2--5 \euro{}/Monat üblich).
     \bottomrule
 \end{tabular}
 
-\subsection{Zielgebiete}
-DACH-Region (Deutschland, Österreich, Schweiz)
+\vspace{0.5cm}
+Das Zielgebiet ist die DACH-Region (Deutschland, Österreich, Schweiz).
 
 \section{Werbung}
 
-\subsection{Wie erfahren Kunden von Ihrem Angebot?}
-\begin{itemize}
-    \item Social Media (Instagram, Facebook, TikTok)
-    \item SEO-Optimierung für Suchmaschinen
-    \item Mundpropaganda durch zufriedene Nutzer
-    \item Content-Marketing (Blog, Ratgeber)
-\end{itemize}
+Kunden erfahren von FreshGuard über Social Media (Instagram, Facebook, TikTok), SEO-Optimierung für Suchmaschinen, Mundpropaganda durch zufriedene Nutzer sowie Content-Marketing über Blog und Ratgeber. Ab dem Launch wird die Social-Media-Präsenz aufgebaut, in den Monaten eins bis drei folgt Content-Marketing mit Blog-Artikeln zu Lebensmittelverschwendung. In den Monaten drei bis sechs ist gezielte Social-Media-Werbung geplant und ab Monat sechs sollen Influencer-Kooperationen im Bereich Nachhaltigkeit hinzukommen.
 
-\subsection{Geplante Werbemaßnahmen}
-\begin{tabular}{ll}
-    \toprule
-    \textbf{Zeitraum} & \textbf{Maßnahme} \\
-    \midrule
-    Ab Launch & Social-Media-Präsenz aufbauen \\
-    Monat 1--3 & Content-Marketing (Blog-Artikel zu Lebensmittelverschwendung) \\
-    Monat 3--6 & Gezielte Social-Media-Werbung \\
-    Ab Monat 6 & Influencer-Kooperationen im Bereich Nachhaltigkeit \\
-    \bottomrule
-\end{tabular}
-
-\subsection{Werbebudget}
 \begin{tabular}{lr}
     \toprule
-    \textbf{Jahr} & \textbf{Budget} \\
+    \textbf{Jahr} & \textbf{Werbebudget} \\
     \midrule
     Jahr 1 & ca. 2.000 \euro{} \\
     Jahr 2 & ca. 5.000 \euro{} \\
@@ -140,10 +57,5 @@ DACH-Region (Deutschland, Österreich, Schweiz)
     \bottomrule
 \end{tabular}
 
-\subsection{Marketing-Mix Abstimmung}
-\begin{itemize}
-    \item Freemium-Modell ermöglicht virales Wachstum
-    \item Zufriedene Free-User werben neue Nutzer an
-    \item Premium-Upgrade innerhalb der App prominent platziert
-    \item Nachhaltigkeits-Thema spricht umweltbewusste Zielgruppe an
-\end{itemize}
+\vspace{0.5cm}
+Der Marketing-Mix ist darauf ausgelegt, virales Wachstum durch das Freemium-Modell zu ermöglichen. Zufriedene Free-User werben neue Nutzer an und das Premium-Upgrade ist innerhalb der App prominent platziert. Das Nachhaltigkeits-Thema spricht gezielt die umweltbewusste Zielgruppe an.
