--- a/kapitel/06_organisation.tex
+++ b/kapitel/06_organisation.tex
@@ -2,7 +2,8 @@
 
 \section{Gründer und Partner}
 
-\subsection{Unternehmensprofil}
+FreshGuard wird von drei Gründern mit komplementären Fähigkeiten gegründet, wobei die Gründung am 24. Dezember 2025 geplant ist. Phillipp Atzler fungiert als Geschäftsführer, und alle drei Gesellschafter -- Maike Abel, Phillipp Atzler und Elisa Dörnbrak -- haben eine Ausbildung zum Fachinformatiker Anwendungsentwicklung absolviert. Der Unternehmenssitz ist in Deutschland und der Geschäftszweck umfasst die Entwicklung und den Betrieb von Webanwendungen zur Haushaltsverwaltung.
+
 \begin{tabular}{ll}
     \toprule
     \textbf{Merkmal} & \textbf{Details} \\
@@ -11,57 +12,20 @@
     Geschäftsführer & Phillipp Atzler \\
     Gesellschafter & Maike Abel, Phillipp Atzler, Elisa Dörnbrak \\
     Sitz & Deutschland \\
-    Geschäftszweck & Entwicklung und Betrieb von Webanwendungen zur Haushaltsverwaltung \\
-    \bottomrule
-\end{tabular}
-
-\subsection{Unternehmensphase}
-Gründung -- Prototyp fertiggestellt, Markteinführung geplant für 01.02.2026.
-
-\subsection{Anzahl der Gründer/Partner}
-3 Gründer mit komplementären Fähigkeiten.
-
-\subsection{Aufgabenverteilung / Organigramm}
-\begin{tabular}{lll}
-    \toprule
-    \textbf{Name} & \textbf{Rolle} & \textbf{Aufgaben} \\
-    \midrule
-    Phillipp Atzler & Geschäftsführer, Lead Developer & Backend, Datenbank, Tests, DevOps \\
-    Maike Abel & Gesellschafterin, Frontend Lead & UI/UX-Design, Frontend, Dokumentation \\
-    Elisa Dörnbrak & Gesellschafterin, Projektmanagement & QA, Kundenbetreuung, Koordination \\
     \bottomrule
 \end{tabular}
 
 \vspace{0.5cm}
-Alle Gründer: Ausbildung zum/zur Fachinformatiker/in Anwendungsentwicklung.
+Das Unternehmen befindet sich in der Gründungsphase, wobei der Prototyp fertiggestellt ist und die Markteinführung für den 01. Februar 2026 geplant ist.
 
-\subsection{Vertretungsregelung}
-\begin{itemize}
-    \item Bei Abwesenheit eines Gründers übernehmen die anderen beiden
-    \item Technische Dokumentation ermöglicht Einarbeitung
-    \item Kritische Zugangsdaten sicher bei allen Gesellschaftern hinterlegt
-\end{itemize}
+Die Aufgaben sind klar verteilt: Phillipp Atzler übernimmt als Geschäftsführer und Lead Developer die Bereiche Backend, Datenbank, Tests und DevOps. Maike Abel ist als Frontend Lead für UI/UX-Design, Frontend-Entwicklung und Dokumentation verantwortlich. Elisa Dörnbrak kümmert sich um Projektmanagement, QA, Kundenbetreuung und Koordination.
+
+Bei Abwesenheit eines Gründers übernehmen die anderen beiden dessen Aufgaben. Die technische Dokumentation ermöglicht eine schnelle Einarbeitung und kritische Zugangsdaten sind sicher bei allen Gesellschaftern hinterlegt.
 
 \section{Mitarbeiter}
 
-\subsection{Benötigte Mitarbeiter}
-Erst wenn Gewinne fließen und es sich finanziell lohnt. Je nach Bedarf für:
-\begin{itemize}
-    \item Entwicklung (zusätzliche Features)
-    \item Kundenbetreuung (Support)
-\end{itemize}
+Zusätzliche Mitarbeiter werden erst eingestellt, wenn Gewinne fließen und es sich finanziell lohnt. Je nach Bedarf werden dann Entwickler für zusätzliche Features oder Mitarbeiter für die Kundenbetreuung gesucht. Für die Entwicklung werden Fachinformatiker oder Absolventen eines Informatik-Studiums mit PHP- und Web-Kenntnissen bevorzugt. Für die Kundenbetreuung sind Kommunikationsfähigkeit und technisches Grundverständnis erforderlich.
 
-\subsection{Anforderungsprofil}
-\begin{tabular}{ll}
-    \toprule
-    \textbf{Bereich} & \textbf{Qualifikationen} \\
-    \midrule
-    Entwicklung & Fachinformatiker oder Informatik-Studium, PHP/Web-Kenntnisse \\
-    Kundenbetreuung & Kommunikationsfähigkeit, technisches Grundverständnis \\
-    \bottomrule
-\end{tabular}
-
-\subsection{Personalplanung}
 \begin{tabular}{lr}
     \toprule
     \textbf{Zeitraum} & \textbf{Mitarbeiter} \\
@@ -72,45 +36,13 @@ Erst wenn Gewinne fließen und es sich finanziell lohnt. Je nach Bedarf für:
     \bottomrule
 \end{tabular}
 
-\subsection{Schulungsmaßnahmen}
-\begin{itemize}
-    \item Interne Einarbeitung in die Codebasis
-    \item Dokumentation aller Prozesse und Workflows
-    \item Pair-Programming mit erfahrenen Gründern
-\end{itemize}
+\vspace{0.5cm}
+Neue Mitarbeiter werden durch interne Einarbeitung in die Codebasis, Dokumentation aller Prozesse und Workflows sowie Pair-Programming mit erfahrenen Gründern geschult.
 
 \section{Berater und Unterstützer}
 
-\subsection{Unternehmensberater}
-IHK-Gründungsberatung (kostenlos), ggf. Startup-Mentoring.
-
-\subsection{Steuerberater}
-Ab Gründung zur Unterstützung bei Steuererklärungen und Buchhaltung.
-
-\subsection{Rechtsanwalt}
-Bei Bedarf für AGB-Prüfung und Vertragsangelegenheiten.
-
-\subsection{Weitere Unterstützer}
-\begin{itemize}
-    \item Familie und Freunde (Testnutzer)
-    \item IT-Netzwerk für fachlichen Austausch
-    \item Open-Source-Community (Bootstrap, Chart.js, PHP)
-\end{itemize}
+Das Unternehmen plant die Nutzung der kostenlosen IHK-Gründungsberatung und gegebenenfalls Startup-Mentoring. Ab der Gründung wird ein Steuerberater zur Unterstützung bei Steuererklärungen und Buchhaltung hinzugezogen, und bei Bedarf wird ein Rechtsanwalt für AGB-Prüfung und Vertragsangelegenheiten konsultiert. Darüber hinaus stehen Familie und Freunde als Testnutzer zur Verfügung, ein IT-Netzwerk für fachlichen Austausch sowie die Open-Source-Community (Bootstrap, Chart.js, PHP).
 
 \section{Gründungsformalitäten}
 
-\subsection{Genehmigungen und Anmeldungen}
-\begin{itemize}
-    \item Gewerbeanmeldung beim zuständigen Gewerbeamt
-    \item Anmeldung beim Finanzamt (Steuernummer)
-    \item Ggf. Eintragung ins Handelsregister (bei Umwandlung in UG/GmbH)
-\end{itemize}
-
-\subsection{Lizenzen und Rechte}
-\begin{itemize}
-    \item Open-Source-Bibliotheken: Bootstrap, Chart.js, PHP (MIT/Apache Lizenzen)
-    \item Eigene Software: Proprietär
-\end{itemize}
-
-\subsection{Geplantes Gründungsdatum}
-\textbf{24. Dezember 2025}
+Zu den erforderlichen Genehmigungen und Anmeldungen gehören die Gewerbeanmeldung beim zuständigen Gewerbeamt, die Anmeldung beim Finanzamt für die Steuernummer sowie gegebenenfalls die Eintragung ins Handelsregister bei einer späteren Umwandlung in UG oder GmbH. Für Open-Source-Bibliotheken wie Bootstrap, Chart.js und PHP werden MIT- und Apache-Lizenzen genutzt, während die eigene Software proprietär bleibt. Das geplante Gründungsdatum ist der \textbf{24. Dezember 2025}.
