--- a/kapitel/07_rechtsform.tex
+++ b/kapitel/07_rechtsform.tex
@@ -1,38 +1,15 @@
 \chapter{Rechtsform}
 
-\section{Gewählte Rechtsform}
-\textbf{GbR (Gesellschaft bürgerlichen Rechts)} zu Beginn.
+\section{Gewählte Rechtsform und Begründung}
 
-Bei Wachstum ist eine Umwandlung in UG (haftungsbeschränkt) oder GmbH geplant.
+Für den Start wurde die \textbf{GbR (Gesellschaft bürgerlichen Rechts)} als Rechtsform gewählt, wobei bei entsprechendem Wachstum eine Umwandlung in UG (haftungsbeschränkt) oder GmbH geplant ist.
 
-\section{Begründung der Rechtsformwahl}
+Die Vorteile der GbR liegen in der einfachen Gründung ohne Notar und Handelsregistereintrag, den geringen Kosten von nur circa 30 bis 50 Euro für die Gewerbeanmeldung, dem fehlenden Erfordernis einer Mindesteinlage, der flexiblen Gestaltung durch einen frei verhandelbaren Gesellschaftsvertrag sowie der Möglichkeit zum schnellen Start innerhalb weniger Tage.
 
-\subsection{Vorteile der GbR}
-\begin{itemize}
-    \item \textbf{Einfache Gründung:} Kein Notar, kein Handelsregistereintrag erforderlich
-    \item \textbf{Geringe Kosten:} Nur Gewerbeanmeldung (ca. 30--50 \euro{})
-    \item \textbf{Keine Mindesteinlage:} Kein Stammkapital erforderlich
-    \item \textbf{Flexible Gestaltung:} Gesellschaftsvertrag frei verhandelbar
-    \item \textbf{Schneller Start:} Gründung innerhalb weniger Tage möglich
-\end{itemize}
+Die Nachteile sind die persönliche Haftung der Gesellschafter, die fehlende Eintragungsmöglichkeit im Handelsregister sowie eine begrenzte Außenwirkung bei Geschäftspartnern. Bei Erreichen eines nachhaltigen Wachstums ab circa 50.000 Euro Jahresumsatz ist daher die Umwandlung in eine UG (haftungsbeschränkt) oder die direkte Gründung einer GmbH vorgesehen.
 
-\subsection{Nachteile der GbR}
-\begin{itemize}
-    \item Persönliche Haftung der Gesellschafter
-    \item Nicht eintragungsfähig im Handelsregister
-    \item Begrenzte Außenwirkung bei Geschäftspartnern
-\end{itemize}
+\section{Gesellschafterstruktur und Haftung}
 
-\subsection{Geplante Umwandlung}
-Bei Erreichen von nachhaltigem Wachstum (ab ca. 50.000 \euro{} Jahresumsatz):
-\begin{itemize}
-    \item Umwandlung in \textbf{UG (haftungsbeschränkt)} oder
-    \item Direkte Gründung einer \textbf{GmbH}
-\end{itemize}
-
-\section{Gesellschafteranteile und Haftung}
-
-\subsection{Gesellschafterstruktur}
 \begin{tabular}{llr}
     \toprule
     \textbf{Gesellschafter} & \textbf{Rolle} & \textbf{Anteil} \\
@@ -40,41 +17,16 @@ Bei Erreichen von nachhaltigem Wachstum (ab ca. 50.000 \euro{} Jahresumsatz):
     Phillipp Atzler & Geschäftsführer & 40\% \\
     Maike Abel & Gesellschafterin & 30\% \\
     Elisa Dörnbrak & Gesellschafterin & 30\% \\
-    \midrule
-    \textbf{Gesamt} & & \textbf{100\%} \\
     \bottomrule
 \end{tabular}
 
-\subsection{Begründung der Anteilsverteilung}
-\begin{itemize}
-    \item Phillipp Atzler erhält 40\% als Geschäftsführer mit erhöhter Verantwortung
-    \item Maike Abel und Elisa Dörnbrak erhalten je 30\% als gleichberechtigte Gesellschafterinnen
-    \item Gleichgewicht verhindert Pattsituationen bei Abstimmungen
-\end{itemize}
+\vspace{0.5cm}
+Phillipp Atzler erhält 40 Prozent als Geschäftsführer mit erhöhter Verantwortung, während Maike Abel und Elisa Dörnbrak je 30 Prozent als gleichberechtigte Gesellschafterinnen erhalten. Diese Verteilung verhindert Pattsituationen bei Abstimmungen.
 
-\subsection{Haftung}
-Bei der GbR haften alle Gesellschafter persönlich und unbeschränkt mit ihrem Privatvermögen. Dies wird akzeptiert, da:
-\begin{itemize}
-    \item Das Geschäftsmodell risikoarm ist (Software-as-a-Service)
-    \item Keine hohen Verbindlichkeiten geplant sind
-    \item Bei Wachstum Umwandlung in haftungsbeschränkte Rechtsform erfolgt
-\end{itemize}
+Bei der GbR haften alle Gesellschafter persönlich und unbeschränkt mit ihrem Privatvermögen. Dies wird akzeptiert, da das Geschäftsmodell als Software-as-a-Service risikoarm ist, keine hohen Verbindlichkeiten geplant sind und bei entsprechendem Wachstum eine Umwandlung in eine haftungsbeschränkte Rechtsform erfolgt.
 
 \section{Gesellschaftsvertrag}
 
-\subsection{Berücksichtigung der Gesellschafterinteressen}
-\begin{itemize}
-    \item GbR ermöglicht flexible Zusammenarbeit
-    \item Alle Gesellschafter sind in Entscheidungen eingebunden
-    \item Elisa Dörnbrak fungiert als Mediatorin bei Meinungsverschiedenheiten
-\end{itemize}
+Die GbR ermöglicht eine flexible Zusammenarbeit, bei der alle Gesellschafter in Entscheidungen eingebunden sind. Elisa Dörnbrak fungiert bei Meinungsverschiedenheiten als Mediatorin.
 
-\subsection{Wesentliche Regelungen im Gesellschaftsvertrag}
-\begin{itemize}
-    \item \textbf{Geschäftsführung:} Phillipp Atzler als alleinvertretungsberechtigter Geschäftsführer
-    \item \textbf{Gewinnverteilung:} Entsprechend der Gesellschaftsanteile (40/30/30)
-    \item \textbf{Entscheidungen:} Wichtige Entscheidungen mit 2/3-Mehrheit
-    \item \textbf{Kündigung:} 6 Monate Kündigungsfrist für Gesellschafter
-    \item \textbf{Wettbewerbsverbot:} Während der Gesellschaftszugehörigkeit
-    \item \textbf{Streitbeilegung:} Mediation vor Gerichtsverfahren
-\end{itemize}
+Die wesentlichen Regelungen im Gesellschaftsvertrag umfassen folgende Punkte: Phillipp Atzler ist als alleinvertretungsberechtigter Geschäftsführer eingesetzt. Die Gewinnverteilung erfolgt entsprechend der Gesellschaftsanteile (40/30/30). Wichtige Entscheidungen werden mit Zweidrittel-Mehrheit getroffen. Für ausscheidende Gesellschafter gilt eine Kündigungsfrist von sechs Monaten. Während der Gesellschaftszugehörigkeit besteht ein Wettbewerbsverbot. Im Streitfall ist vor einem Gerichtsverfahren eine Mediation vorgeschrieben.
