--- a/kapitel/08_risiken.tex
+++ b/kapitel/08_risiken.tex
@@ -2,62 +2,16 @@
 
 \section{Chancen}
 
-\subsection{Die drei größten Chancen}
-\begin{enumerate}
-    \item \textbf{Wachsendes Umweltbewusstsein:} Der gesellschaftliche Trend zu weniger Lebensmittelverschwendung und nachhaltigem Konsum stärkt die Nachfrage nach Lösungen wie FreshGuard.
-    
-    \item \textbf{Zunahme von Mehrpersonenhaushalten:} Wohngemeinschaften, Mehrgenerationenhäuser und größere Familien benötigen kollaborative Lösungen zur Haushaltsverwaltung.
-    
-    \item \textbf{Digitalisierung im Alltag:} Immer mehr Menschen nutzen digitale Tools zur Organisation ihres Alltags -- die Akzeptanz für Web-Apps steigt kontinuierlich.
-\end{enumerate}
+Die drei größten Chancen für FreshGuard liegen im wachsenden Umweltbewusstsein, da der gesellschaftliche Trend zu weniger Lebensmittelverschwendung und nachhaltigem Konsum die Nachfrage nach Lösungen wie FreshGuard stärkt. Außerdem nimmt die Anzahl an Mehrpersonenhaushalten zu, denn Wohngemeinschaften, Mehrgenerationenhäuser und größere Familien benötigen kollaborative Lösungen zur Haushaltsverwaltung. Schließlich profitiert FreshGuard von der fortschreitenden Digitalisierung im Alltag, da immer mehr Menschen digitale Tools zur Organisation ihres Alltags nutzen und die Akzeptanz für Web-Apps kontinuierlich steigt.
 
-\subsection{Marktchancen}
-\begin{itemize}
-    \item Wachsender Markt für Nachhaltigkeits-Apps
-    \item Steigende Sensibilität für Lebensmittelverschwendung (EU-Initiativen)
-    \item Noch kein dominanter Marktführer im DACH-Raum
-\end{itemize}
+Auf dem Markt bieten sich weitere Chancen durch den wachsenden Markt für Nachhaltigkeits-Apps, die steigende Sensibilität für Lebensmittelverschwendung im Rahmen von EU-Initiativen sowie das Fehlen eines dominanten Marktführers im DACH-Raum. Technologisch ermöglichen Progressive Web Apps App-ähnliche Erlebnisse, Cloud-Technologien erlauben kosteneffiziente Skalierung und das Open-Source-Ökosystem reduziert die Entwicklungskosten. Strategisch ergeben sich Möglichkeiten für Kooperationen mit Nachhaltigkeits-Initiativen, eine B2B-Erweiterung auf Kantinen und kleine Gastro-Betriebe sowie eine internationale Expansion nach erfolgreicher Etablierung im DACH-Raum.
 
-\subsection{Technologische Chancen}
-\begin{itemize}
-    \item Progressive Web Apps (PWA) ermöglichen App-ähnliche Erlebnisse
-    \item Cloud-Technologien erlauben kosteneffiziente Skalierung
-    \item Open-Source-Ökosystem reduziert Entwicklungskosten
-\end{itemize}
+\section{Risiken und Absicherung}
 
-\subsection{Strategische Chancen}
-\begin{itemize}
-    \item Kooperationen mit Nachhaltigkeits-Initiativen
-    \item B2B-Erweiterung (Kantinen, kleine Gastro-Betriebe)
-    \item Internationale Expansion nach erfolgreicher DACH-Etablierung
-\end{itemize}
+Die drei größten Risiken bestehen in der Konkurrenz durch etablierte Apps wie Bring! und NoWaste, die größere Marketing-Budgets und eine bestehende Nutzerbasis haben. Zudem könnte die Zahlungsbereitschaft gering ausfallen, wenn Nutzer die kostenlose Version bevorzugen und nicht auf Premium upgraden. Schließlich könnten technische Probleme wie Sicherheitsvorfälle oder Serverausfälle das Vertrauen der Nutzer beschädigen.
 
-\section{Risiken}
+Intern bestehen Risiken durch den möglichen Ausfall eines Gründers durch Krankheit oder Ausstieg, die mangelnde Marketing-Erfahrung im Team sowie die Überlastung durch die Mehrfachbelastung aus Entwicklung und Betrieb. Externe Risiken umfassen verschärfte Datenschutzvorschriften, eine wirtschaftliche Rezession, die die Ausgabebereitschaft reduziert, sowie technologischen Wandel durch neue Plattformen oder Standards.
 
-\subsection{Die drei größten Risiken}
-\begin{enumerate}
-    \item \textbf{Konkurrenz:} Etablierte Apps (Bring!, NoWaste) haben größere Marketing-Budgets und bestehende Nutzerbasis.
-    
-    \item \textbf{Geringe Zahlungsbereitschaft:} Nutzer könnten die kostenlose Version bevorzugen und nicht auf Premium upgraden.
-    
-    \item \textbf{Technische Probleme:} Sicherheitsvorfälle oder Serverausfälle könnten das Vertrauen der Nutzer beschädigen.
-\end{enumerate}
-
-\subsection{Interne Risiken}
-\begin{itemize}
-    \item Ausfall eines Gründers (Krankheit, Ausstieg)
-    \item Mangelnde Marketing-Erfahrung im Team
-    \item Überlastung durch Mehrfachbelastung (Entwicklung + Betrieb)
-\end{itemize}
-
-\subsection{Externe Risiken}
-\begin{itemize}
-    \item Verschärfte Datenschutzvorschriften
-    \item Wirtschaftliche Rezession reduziert Ausgabebereitschaft
-    \item Technologischer Wandel (neue Plattformen/Standards)
-\end{itemize}
-
-\subsection{Absicherung gegen Risiken}
 \begin{tabular}{p{5cm}p{8cm}}
     \toprule
     \textbf{Risiko} & \textbf{Gegenmaßnahme} \\
@@ -71,35 +25,10 @@
 
 \section{SWOT-Analyse}
 
-\subsection{Stärken (Strengths)}
-\begin{itemize}
-    \item Technische Kompetenz des Gründerteams
-    \item Echte Multi-User-Funktionalität (USP)
-    \item DSGVO-Konformität mit deutschem Hosting
-    \item Schlanke Kostenstruktur
-    \item Fertiger MVP
-\end{itemize}
+Die \textbf{Stärken} von FreshGuard liegen in der technischen Kompetenz des Gründerteams, der echten Multi-User-Funktionalität als USP, der DSGVO-Konformität mit deutschem Hosting, der schlanken Kostenstruktur sowie dem fertigen MVP.
 
-\subsection{Schwächen (Weaknesses)}
-\begin{itemize}
-    \item Keine etablierte Marke/Nutzerbasis
-    \item Begrenzte Marketing-Erfahrung
-    \item Keine native App (nur Web)
-    \item Begrenztes Startkapital
-\end{itemize}
+Die \textbf{Schwächen} umfassen das Fehlen einer etablierten Marke und Nutzerbasis, die begrenzte Marketing-Erfahrung, das Fehlen einer nativen App (nur Web) sowie das begrenzte Startkapital.
 
-\subsection{Chancen (Opportunities)}
-\begin{itemize}
-    \item Wachsender Nachhaltigkeits-Trend
-    \item Zunahme von Mehrpersonenhaushalten
-    \item Digitalisierung des Alltags
-    \item B2B-Potenzial (Kantinen, Gastro)
-\end{itemize}
+Die \textbf{Chancen} bestehen im wachsenden Nachhaltigkeits-Trend, der Zunahme von Mehrpersonenhaushalten, der Digitalisierung des Alltags sowie dem B2B-Potenzial bei Kantinen und in der Gastronomie.
 
-\subsection{Risiken (Threats)}
-\begin{itemize}
-    \item Etablierte Konkurrenz mit größerem Budget
-    \item Geringe Zahlungsbereitschaft für Premium
-    \item Technische Sicherheitsrisiken
-    \item Wirtschaftliche Unsicherheiten
-\end{itemize}
+Die \textbf{Risiken} sind die etablierte Konkurrenz mit größerem Budget, die geringe Zahlungsbereitschaft für Premium, technische Sicherheitsrisiken sowie wirtschaftliche Unsicherheiten.
