--- a/kapitel/09_finanzplan.tex
+++ b/kapitel/09_finanzplan.tex
@@ -2,7 +2,8 @@
 
 \section{Kapitalbedarfsplan}
 
-\subsection{Einmalige Kosten (Gründung \& Ausstattung)}
+Die einmaligen Kosten für Gründung und Ausstattung belaufen sich auf insgesamt 30.750 Euro. Diese setzen sich zusammen aus 50 Euro für die Gewerbeanmeldung der GbR, 500 Euro für Notarkosten für den Gesellschaftsvertrag, 15.000 Euro für Büroausstattung mit drei Arbeitsplätzen, 12.000 Euro für Hardware (drei Entwickler-PCs und Server), 3.000 Euro für Software-Lizenzen (IDE, Design-Tools) sowie 200 Euro für Domain und SSL-Zertifikate.
+
 \begin{tabular}{lr}
     \toprule
     \textbf{Position} & \textbf{Betrag} \\
@@ -18,219 +19,44 @@
     \bottomrule
 \end{tabular}
 
-\subsection{Laufende Kosten (24 Monate)}
-\begin{tabular}{lr}
-    \toprule
-    \textbf{Position} & \textbf{Betrag (24 Mon.)} \\
-    \midrule
-    Büromiete inkl. Nebenkosten (24 $\times$ 2.000 \euro{}) & 48.000 \euro{} \\
-    Gehälter (3 Gründer, 24 $\times$ 4.000 \euro{} $\times$ 3) & 288.000 \euro{} \\
-    Hosting \& Cloud-Infrastruktur (24 $\times$ 200 \euro{}) & 4.800 \euro{} \\
-    Marketing \& Werbung & 12.000 \euro{} \\
-    Buchhaltung/Steuerberater & 3.600 \euro{} \\
-    Versicherungen & 2.400 \euro{} \\
-    Sonstiges (Reisen, Fortbildung) & 6.000 \euro{} \\
-    \midrule
-    \textbf{Summe laufende Kosten} & \textbf{364.800 \euro{}} \\
-    \bottomrule
-\end{tabular}
-
-\subsection{Liquiditätsreserve}
-25.000 \euro{}
-
-\subsection{Gesamtkapitalbedarf}
-\begin{tabular}{lr}
-    \toprule
-    \textbf{Kategorie} & \textbf{Betrag} \\
-    \midrule
-    Einmalige Kosten & 30.750 \euro{} \\
-    Laufende Kosten (24 Monate) & 364.800 \euro{} \\
-    Liquiditätsreserve & 25.000 \euro{} \\
-    \midrule
-    \textbf{Gesamtkapitalbedarf} & \textbf{ca. 375.000 \euro{}} \\
-    \bottomrule
-\end{tabular}
+\vspace{0.5cm}
+Die laufenden Kosten über 24 Monate betragen insgesamt 364.800 Euro und umfassen Büromiete inklusive Nebenkosten (48.000 Euro), Gehälter für drei Gründer (288.000 Euro), Hosting und Cloud-Infrastruktur (4.800 Euro), Marketing und Werbung (12.000 Euro), Buchhaltung und Steuerberater (3.600 Euro), Versicherungen (2.400 Euro) sowie Sonstiges wie Reisen und Fortbildung (6.000 Euro). Hinzu kommt eine Liquiditätsreserve von 25.000 Euro, sodass der Gesamtkapitalbedarf circa 375.000 Euro beträgt.
 
 \section{Finanzierungsplan}
 
-\subsection{Eigenkapitalanteil}
-75.000 \euro{} (25.000 \euro{} pro Gründer aus Ersparnissen)
+Der Eigenkapitalanteil beträgt 75.000 Euro, wobei jeder der drei Gründer 25.000 Euro aus Ersparnissen einbringt. Der Fremdkapitalbedarf von insgesamt 300.000 Euro setzt sich aus einem Bankdarlehen über 200.000 Euro und einem Förderdarlehen der KfW über 100.000 Euro zusammen.
 
-\subsection{Fremdkapitalbedarf}
-\begin{tabular}{lr}
-    \toprule
-    \textbf{Quelle} & \textbf{Betrag} \\
-    \midrule
-    Bankdarlehen & 200.000 \euro{} \\
-    Förderdarlehen (KfW) & 100.000 \euro{} \\
-    \midrule
-    \textbf{Summe Fremdkapital} & \textbf{300.000 \euro{}} \\
-    \bottomrule
-\end{tabular}
+Als Förderprogramme kommen das EXIST-Gründerstipendium für innovative technologiebasierte Gründungen, der KfW-Gründerkredit StartGeld bis 125.000 Euro ohne Eigenkapitalnachweis, der ERP-Gründerkredit Universell für größere Investitionen, der Gründungszuschuss bei Gründung aus einer Anstellung heraus sowie regionale Digitalbonus-Programme je nach Bundesland in Frage. Als mögliche Beteiligungskapitalgeber werden Business Angels im Bereich Nachhaltigkeit und FoodTech, der High-Tech Gründerfonds für innovative Startups, Venture Capital bei Skalierungsbedarf nach Jahr zwei sowie Crowdinvesting zur Einbindung der Community in Betracht gezogen.
 
-\subsection{Förderprogramme}
-\begin{itemize}
-    \item \textbf{EXIST-Gründerstipendium:} Für innovative technologiebasierte Gründungen
-    \item \textbf{KfW-Gründerkredit StartGeld:} Bis 125.000 \euro{} ohne Eigenkapitalnachweis
-    \item \textbf{ERP-Gründerkredit Universell:} Für größere Investitionen
-    \item \textbf{Gründungszuschuss:} Falls aus Anstellung gegründet wird
-    \item \textbf{Regionale Digitalbonus-Programme:} Je nach Bundesland
-\end{itemize}
-
-\subsection{Beteiligungskapitalgeber}
-\begin{itemize}
-    \item \textbf{Business Angels:} Im Bereich Nachhaltigkeit/FoodTech
-    \item \textbf{High-Tech Gründerfonds (HTGF):} Für innovative Startups
-    \item \textbf{Venture Capital:} Bei Skalierungsbedarf nach Jahr 2
-    \item \textbf{Crowdinvesting:} Zur Einbindung der Community
-\end{itemize}
-
-\subsection{Leasing-Optionen}
-\begin{tabular}{llr}
-    \toprule
-    \textbf{Objekt} & \textbf{Laufzeit} & \textbf{Rate/Monat} \\
-    \midrule
-    Büromöbel & 36 Monate & ca. 300 \euro{} \\
-    Hardware (IT-Leasing) & 36 Monate & ca. 400 \euro{} \\
-    \bottomrule
-\end{tabular}
-
-\vspace{0.3cm}
-Option: Sale-and-Lease-Back bei Liquiditätsbedarf
-
-\section{Sicherheiten}
-\begin{itemize}
-    \item Bürgschaften der drei Gesellschafter
-    \item Verpfändung von Gesellschaftsanteilen
-    \item Ggf. Bürgschaft durch Bürgschaftsbank des Landes
-    \item Forderungsabtretung aus Kundenverträgen (ab Jahr 2)
-\end{itemize}
+Alternativ besteht die Möglichkeit zum Leasing von Büromöbeln über 36 Monate für circa 300 Euro monatlich und IT-Hardware für circa 400 Euro monatlich. Als Sicherheiten können Bürgschaften der drei Gesellschafter, Verpfändung von Gesellschaftsanteilen, gegebenenfalls eine Bürgschaft durch die Bürgschaftsbank des Landes sowie ab Jahr zwei eine Forderungsabtretung aus Kundenverträgen dienen.
 
 \section{Liquiditätsplan}
 
-\subsection{Monatliche Einzahlungen (3-Jahres-Prognose)}
-\begin{tabular}{lll}
+Die monatlichen Einnahmen entwickeln sich über drei Jahre wie folgt: In Jahr eins, Monate eins bis sechs (Entwicklungsphase), werden keine Einnahmen erzielt. In den Monaten sieben bis zwölf (Soft-Launch) sind circa 2.000 Euro monatlich zu erwarten. In Jahr zwei (Wachstumsphase) steigen die Einnahmen auf circa 8.000 Euro monatlich und in Jahr drei (Skalierungsphase) auf circa 25.000 Euro monatlich.
+
+Die monatlichen Fixkosten belaufen sich auf circa 14.500 Euro und setzen sich zusammen aus Gehältern für drei Gründer (12.000 Euro), Büromiete (2.000 Euro), Hosting und Cloud (200 bis 1.000 Euro), Buchhaltung (150 Euro) und Versicherungen (100 Euro). Hinzu kommen variable Kosten für Marketing (500 bis 2.000 Euro monatlich) und Sonstiges (200 Euro monatlich), sodass die geschätzten Gesamtkosten bei 15.000 bis 17.000 Euro pro Monat liegen.
+
+Die Investitionskosten in den ersten zwölf Monaten betragen insgesamt circa 48.000 Euro, davon 30.750 Euro im ersten Monat für Gründung und Ausstattung, je 1.000 Euro in den Monaten zwei bis sechs für Software und Tools sowie je 2.000 Euro in den Monaten sieben bis zwölf für Marketing und Server.
+
+Der Kapitaldienst für Tilgung und Zinsen beträgt für das Bankdarlehen über 200.000 Euro bei fünf Prozent Zins und zehn Jahren Laufzeit circa 2.100 Euro monatlich. Das KfW-Darlehen über 100.000 Euro mit zwei Prozent Zins ist in den Jahren eins und zwei tilgungsfrei und kostet ab Jahr drei circa 1.100 Euro monatlich.
+
+Die Liquiditätsentwicklung zeigt in Jahr eins ein negatives Ergebnis in der Aufbauphase, das durch das Startkapital gedeckt wird. In Jahr zwei liegt das monatliche Minus bei circa 7.000 Euro, wobei zum Ende des Jahres der Break-Even erreicht werden soll. Ab Jahr drei wird ein positiver Cashflow von circa 5.000 Euro monatlich erwartet.
+
+\section{Ertragsvorschau}
+
+\begin{tabular}{lrrr}
     \toprule
-    \textbf{Zeitraum} & \textbf{Phase} & \textbf{Einnahmen/Monat} \\
+    \textbf{Position} & \textbf{Jahr 1} & \textbf{Jahr 2} & \textbf{Jahr 3} \\
     \midrule
-    Jahr 1, Monat 1--6 & Entwicklung & 0 \euro{} \\
-    Jahr 1, Monat 7--12 & Soft-Launch & ca. 2.000 \euro{} \\
-    Jahr 2 & Wachstum & ca. 8.000 \euro{} \\
-    Jahr 3 & Skalierung & ca. 25.000 \euro{} \\
+    Umsatz & ca. 12.000 \euro{} & ca. 96.000 \euro{} & ca. 300.000 \euro{} \\
+    Kosten & ca. 230.000 \euro{} & ca. 200.000 \euro{} & ca. 220.000 \euro{} \\
+    Gewinn/Verlust & ca. -218.000 \euro{} & ca. -104.000 \euro{} & ca. +80.000 \euro{} \\
     \bottomrule
 \end{tabular}
 
-\subsection{Monatliche Kosten}
-\textbf{Fixkosten pro Monat:}
-\begin{tabular}{lr}
-    \toprule
-    \textbf{Position} & \textbf{Betrag} \\
-    \midrule
-    Gehälter (3 Gründer) & 12.000 \euro{} \\
-    Büromiete & 2.000 \euro{} \\
-    Hosting/Cloud & 200--1.000 \euro{} \\
-    Buchhaltung & 150 \euro{} \\
-    Versicherungen & 100 \euro{} \\
-    \midrule
-    \textbf{Summe Fixkosten} & ca. 14.500 \euro{} \\
-    \bottomrule
-\end{tabular}
+\vspace{0.5cm}
+Der Break-Even wird voraussichtlich Mitte Jahr drei erreicht. Der kumulierte Verlust bis zum Break-Even beträgt circa 300.000 Euro und wird durch Eigenkapital (75.000 Euro) sowie Fremdkapital (300.000 Euro) gedeckt.
 
-\vspace{0.3cm}
-\textbf{Variable Kosten:}
-\begin{itemize}
-    \item Marketing: 500--2.000 \euro{}/Monat
-    \item Sonstiges: 200 \euro{}/Monat
-\end{itemize}
+\section{Informationsquellen zur Finanzierung}
 
-\textbf{Geschätzte Gesamtkosten: 15.000--17.000 \euro{}/Monat}
-
-\subsection{Investitionskosten (erste 12 Monate)}
-\begin{tabular}{lr}
-    \toprule
-    \textbf{Zeitraum} & \textbf{Investition} \\
-    \midrule
-    Monat 1 & 30.750 \euro{} (Gründung, Ausstattung) \\
-    Monat 2--6 & je 1.000 \euro{} (Software, Tools) \\
-    Monat 7--12 & je 2.000 \euro{} (Marketing, Server) \\
-    \midrule
-    \textbf{Gesamt Jahr 1} & \textbf{ca. 48.000 \euro{}} \\
-    \bottomrule
-\end{tabular}
-
-\subsection{Kapitaldienst (Tilgung und Zinsen)}
-\begin{tabular}{llr}
-    \toprule
-    \textbf{Darlehen} & \textbf{Konditionen} & \textbf{Rate/Monat} \\
-    \midrule
-    Bankdarlehen (200.000 \euro{}) & 5\% Zins, 10 Jahre & ca. 2.100 \euro{} \\
-    KfW-Darlehen (100.000 \euro{}) & 2\% Zins, tilgungsfrei J. 1--2 & ab J. 3: 1.100 \euro{} \\
-    \midrule
-    \textbf{Gesamt} & & \textbf{2.100--3.200 \euro{}} \\
-    \bottomrule
-\end{tabular}
-
-\subsection{Liquiditätsreserve}
-\begin{tabular}{ll}
-    \toprule
-    \textbf{Jahr} & \textbf{Liquidität} \\
-    \midrule
-    Jahr 1 & Negativ (Aufbauphase) -- gedeckt durch Startkapital \\
-    Jahr 2 & ca. -7.000 \euro{}/Monat $\rightarrow$ Break-Even Ende Jahr 2 \\
-    Jahr 3 & ca. +5.000 \euro{}/Monat $\rightarrow$ Positiver Cashflow \\
-    \bottomrule
-\end{tabular}
-
-\section{Ertragsvorschau / Rentabilitätsvorschau}
-
-\subsection{Umsatzprognose (3 Jahre)}
-\begin{tabular}{lr}
-    \toprule
-    \textbf{Jahr} & \textbf{Umsatz} \\
-    \midrule
-    Jahr 1 & ca. 12.000 \euro{} (Soft-Launch) \\
-    Jahr 2 & ca. 96.000 \euro{} (Wachstum) \\
-    Jahr 3 & ca. 300.000 \euro{} (Skalierung + B2B) \\
-    \bottomrule
-\end{tabular}
-
-\subsection{Kostenprognose (3 Jahre)}
-\begin{tabular}{lr}
-    \toprule
-    \textbf{Jahr} & \textbf{Kosten} \\
-    \midrule
-    Jahr 1 & ca. 230.000 \euro{} (Aufbau + Vollbetrieb) \\
-    Jahr 2 & ca. 200.000 \euro{} (Vollbetrieb) \\
-    Jahr 3 & ca. 220.000 \euro{} (+ Marketing) \\
-    \bottomrule
-\end{tabular}
-
-\subsection{Gewinnprognose (3 Jahre)}
-\begin{tabular}{lr}
-    \toprule
-    \textbf{Jahr} & \textbf{Gewinn/Verlust} \\
-    \midrule
-    Jahr 1 & ca. -218.000 \euro{} (Anlaufverlust) \\
-    Jahr 2 & ca. -104.000 \euro{} (Verlustreduktion) \\
-    Jahr 3 & ca. +80.000 \euro{} (erster Gewinn) \\
-    \bottomrule
-\end{tabular}
-
-\subsection{Break-Even-Analyse}
-\begin{itemize}
-    \item \textbf{Break-Even:} Voraussichtlich Mitte Jahr 3
-    \item \textbf{Kumulierter Verlust bis Break-Even:} ca. 300.000 \euro{}
-    \item \textbf{Deckung:} Durch Eigenkapital (75.000 \euro{}) + Fremdkapital (300.000 \euro{})
-\end{itemize}
-
-\section{Finanzierungswissen}
-
-\textbf{Genutzte Informationsquellen:}
-\begin{itemize}
-    \item IHK Gründungsberatung und Seminare
-    \item Förderdatenbank des BMWi (foerderdatenbank.de)
-    \item Gründerplattform.de
-    \item KfW-Beratungsgespräch
-    \item Startup-Workshops und Networking-Events
-    \item Fachliteratur zu SaaS-Geschäftsmodellen
-\end{itemize}
+Die Finanzierungsplanung basiert auf Informationen aus IHK-Gründungsberatung und Seminaren, der Förderdatenbank des BMWi (foerderdatenbank.de), der Gründerplattform.de, KfW-Beratungsgesprächen, Startup-Workshops und Networking-Events sowie Fachliteratur zu SaaS-Geschäftsmodellen.
